--- a/externals/skia/CMakeLists.txt
+++ b/externals/skia/CMakeLists.txt
@@ -41,6 +41,7 @@ elseif(CMAKE_TARGET_OS STREQUAL "darwin")
 	set(target_specific_include_dirs_public ${target_specific_include_dirs_public}
 		"upstream.patched/include/utils/mac"
 	)
+	file(GLOB src_gpu_gl_mac "upstream.patched/src/gpu/gl/mac/*")
 	set(target_specific_sources "${target_specific_sources}"
 		"upstream.patched/src/ports/SkDebug_stdio.cpp"
 		"upstream.patched/src/ports/SkThread_pthread.cpp"
@@ -50,11 +51,11 @@ elseif(CMAKE_TARGET_OS STREQUAL "darwin")
 		"upstream.patched/src/utils/mac/SkStream_mac.cpp"
 		"upstream.patched/src/ports/SkOSFile_posix.cpp"
 		"upstream.patched/src/ports/SkTLS_pthread.cpp"
+		${src_gpu_gl_mac}
 	)
 	set(target_specific_definitions_public ${target_specific_definitions_public}
 		-DSK_BUILD_FOR_MAC
 		-DSK_USE_CORETEXT
-		-DSK_SUPPORT_GPU=0
 	)
 elseif(CMAKE_TARGET_OS STREQUAL "ios")
 	set(target_specific_include_dirs_public ${target_specific_include_dirs_public}
