Fix text for windows

--- a/externals/skia/CMakeLists.txt
+++ b/externals/skia/CMakeLists.txt
@@ -36,6 +36,7 @@ if(CMAKE_TARGET_OS STREQUAL "windows")
 	)
 	set(target_specific_definitions_public ${target_specific_definitions_public}
 		-DSK_BUILD_FOR_WIN32
+		-DSK_FONTHOST_USES_FONTMGR
 	)
 elseif(CMAKE_TARGET_OS STREQUAL "darwin")
 	set(target_specific_include_dirs_public ${target_specific_include_dirs_public}
@@ -56,6 +57,9 @@ elseif(CMAKE_TARGET_OS STREQUAL "darwin")
 	)
 	set(target_specific_definitions_public ${target_specific_definitions_public}
 		-DSK_BUILD_FOR_MAC
+		-DSK_FONTHOST_USES_FONTMGR
+		-D_CRT_SECURE_NO_WARNINGS
+		-DGR_GL_FUNCTION_TYPE=__stdcall
 	)
 elseif(CMAKE_TARGET_OS STREQUAL "ios")
 	set(target_specific_include_dirs_public ${target_specific_include_dirs_public}
