Split binaryRoutePlanner.h Move workaround for errors on boundary data of maps to RoutingQuery (Map implementation) Change granularity of access to map data. Has a great influence on performance. More lazy access to map data. Recover use of PrecalculatedRouteDirection. Update build system. Some code cleanup.

--- a/targets/.cmake/projects/OsmAndCore/CMakeLists.txt
+++ b/targets/.cmake/projects/OsmAndCore/CMakeLists.txt
@@ -77,8 +77,10 @@ add_library(osmand SHARED
 	"${ROOT}/src/binaryMapIndexRead.cpp"
 	"${ROOT}/src/binaryRoutingIndexRead.cpp"
 	"${ROOT}/src/generalRouter.cpp"
+	"${ROOT}/src/RoutingContext.cpp"
 	"${ROOT}/src/binaryRoutePlanner.cpp"
 	"${ROOT}/src/proto/osmand_index.pb.cc"
+	"${ROOT}/src/PrecalculatedRouteDirection.cpp"
 	"${ROOT}/src/java_wrap.cpp"
 	${pd_sources}
 )
